# cringe-chat

./: client_message_types.py  main.py  package-lock.json  package.json  pool.py  pyproject.toml  security.py  server_message_types.py  tailwind.config.js  todo.txt  unpile_messages.py  utils.py  vite.config.js  vite_utils.py
resources/: main.js
templates/: base.html  chat.html  home.html  recipient.html  vite_assets.html
templates/htmx/: chat.html  choose-recipient-fragment.html  choose-recipient.html  chosen-username.html  connected-users.html  home.html  own-message.html  recipient-message.html  redirect-response.html
