[tool.poetry]
name = "fastapi-cringe"
version = "0.1.0"
description = ""
authors = ["Einenlum <contact@einenlum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
websockets = "^12.0"
uuid = "^1.30"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
